bad/func_call_invalid_arg_conversion_int_to_class.example_compiler_output
ERROR
[1mbad/func_call_invalid_arg_conversion_int_to_class.lat:3:6: [1;31merror: [0;1mvalue of type `int` is not convertible to type `X`[m
	foo(0);
	    [1;32m^[m
[1mbad/func_call_invalid_arg_conversion_int_to_class.lat:8:1: [1;34mnote: [0;1m`foo` declared here[m
void foo(X a) {}
[1;32m^[m
